--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.0.1",
     "jwt-decode": "^3.1.2",
     "ng-router-outlet-comm": "^1.0.14",
+    "primeicons": "^5.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
