--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~12.2.0",
     "angular-web-storage": "^13.0.0",
     "bootstrap": "^5.0.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "ng-router-outlet-comm": "^1.0.14",
     "primeicons": "^5.0.0",
